# Agent-ai

./: .env  Makefile  PROJECT_SUMMARY.md  README.md  README_STATUS.md  SOLUTION_SUMMARY.md  env.example  pyproject.toml  requirements.txt  setup.py  setup_s3_cors.py  test_complete_solution.py
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  deploy.yml
agents/: __init__.py
agents/checklist_generator/: __init__.py  generator.py
agents/sop_generator/: __init__.py  agent.py
agents/visa_planner/: __init__.py  agent.py
infra/supabase/: schema.sql
infra/terraform/: main.tf
infrastructure/: app.py  aws_stack.py  jobs_stack.py  stepfn_stack.py
libs/cache/: redis_client.py
local_storage/documents/: 4c346e5e-8d0e-4e47-be6a-7d275ec442e5.json  9b1ccfd1-369f-4312-8050-24d09287daf4.json  a2cba73a-d8be-4a68-9335-21f1953577b5.json  b6bd4699-cf0b-4bc5-b9c9-4df615033c6e.json
local_storage/metadata/: 06a1edf7-cb91-45a5-b81c-0fc3a12140b4.json  441620af-b02a-45bd-81a1-c20872b68dd8.json  478b1fc8-4242-4816-993e-28428b96b6e5.json  49298b3b-07d1-4a7c-b5a1-58f330782313.json  4c71d74e-554f-40dc-9417-5575fd44cb01.json  a74905a0-be7b-4447-b387-4231ddb629c2.json  b2becdc0-98e6-448a-abde-7c9b7b06472a.json  cf3a9958-7027-41b0-b7e3-fd8132c931d8.json  d250b3ae-7b90-4c8e-a86f-294305e241fe.json  f2cba141-144d-489c-9c67-be3e63511fd7.json  fe161fb1-f685-4301-9a1e-9c018f1445a2.json
output/: sop_rahul_sharma.txt
scripts/: deploy_aws.sh  seed_questions.py  test_questionnaire_flow.py  test_workflow.py
src/: main.py
tests/: test_agents.py
visamate_ai.egg-info/: PKG-INFO  SOURCES.txt
(+28 files in other folders)
